@@ -63,5 +63,6 @@
 
 @interface WebBackForwardList (WebPrivate)
 - (BOOL)_usesPageCache;
+- (void)_clearPageCache;
 @end
 
